--- a/admin_panel.html
+++ b/admin_panel.html
@@ -26,7 +26,7 @@ img{
 </head>
 <body>
     <header>
-        <h1><img src="/images/admin.jfif" alt=""> &nbspADMIN PANEL </h1>
+        <h1><img src="/images/admin.jpeg" alt=""> &nbspADMIN PANEL </h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="leave_history.html">Leave History</a>
