--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <h1 style="position: relative;">Welcome User!</h1>
         <div class="container">
             <div class="left">
-                <img src="/images/leave.jfif" alt="Leave Management">
+                <img src="/images/leave.jpeg" alt="Leave Management">
             </div>
             <div class="right">
                 <div class="card-container">
@@ -92,8 +92,6 @@
         </div>
     </main>
 
-    <footer style="position: absolute; bottom: 0; left: 0; right: 0;">
-        <p>&copy; 2024 Employee Leave Management System</p>
-    </footer>
+    
 </body>
 </html>
