--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Employee Leave Management System</title>
-    <link rel="icon" type="image/x-icon" href="./images/leave2.png">
+    <link rel="icon" type="image/x-icon" href="leave2.png">
     <style>
         body {
             margin: 0;
@@ -71,7 +71,7 @@
        <h1 style="position: relative;">Welcome User!</h1>
         <div class="container">
             <div class="left">
-                <img src="./images/leave.jpeg" alt="Leave Management">
+                <img src="leave.jpeg" alt="Leave Management">
             </div>
             <div class="right">
                 <div class="card-container">
